PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/Holiday__c.object-meta.xml
<CustomObject>
    <label>Holiday</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Holiday No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>