PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/CarriedOverOfLastYear__c.field-meta.xml
<CustomField>
    <fullName>CarriedOverOfLastYear__c</fullName>
    <defaultValue>0</defaultValue>
    <description>대유넥스티어 연차 계산법 기준이 회계연도로 변경되어 필드 생성 (생성일: 2022-12-27, 생성자: hyunsoo.song@daeunextier.com)

* 필드 설명
이 필드는 매년 12월 31일 23시 00분에 &apos;HolidayLastYearUpdate 매년 12월 31일 업데이트&apos; 스케줄러로 업데이트됨.</description>
    <inlineHelpText>전년도에 발생한 연차일수</inlineHelpText>
    <label>전년도 연차일수</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>