PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/ChildHolidayAction__c.field-meta.xml
<CustomField>
    <fullName>ChildHolidayAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Action</label>
    <referenceTo>HolidayAction__c</referenceTo>
    <relationshipLabel>Holiday</relationshipLabel>
    <relationshipName>ParentHoliday</relationshipName>
    <type>Lookup</type>
</CustomField>