PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Holiday</relationshipLabel>
    <relationshipName>Holiday</relationshipName>
    <type>Lookup</type>
</CustomField>