PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/FirstApprover__c.field-meta.xml
<CustomField>
    <fullName>FirstApprover__c</fullName>
    <formula>ChildHolidayAction__r.FirstHolidayRequest__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1차 승인자</label>
    <type>Text</type>
</CustomField>