PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_Additionaldays__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Additionaldays__c</fullName>
    <formula>FLOOR((Holiday_RuleWorkingYears__c  - 1) / 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>추가연차일수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>