PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_BenefitPaymentDays__c.field-meta.xml
<CustomField>
    <fullName>Holiday_BenefitPaymentDays__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>올해 수당 지급완료된 대체휴가일수</inlineHelpText>
    <label>대체휴가 수당 지급일수</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>