PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_FamilyEvent_Count__c.field-meta.xml
<CustomField>
    <fullName>Holiday_FamilyEvent_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>경조휴가</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>