PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_GivenHolidays__c.field-meta.xml
<CustomField>
    <fullName>Holiday_GivenHolidays__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>추가적으로 부여된 연월차일수</inlineHelpText>
    <label>추가 부여 일수</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>