PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Holiday_IsActive__c</fullName>
    <formula>!ISBLANK(Employee__c) &amp;&amp; Employee__r.Status__c</formula>
    <label>재직여부</label>
    <type>Checkbox</type>
</CustomField>