PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_IsAnnualleave__c.field-meta.xml
<CustomField>
    <fullName>Holiday_IsAnnualleave__c</fullName>
    <formula>Holiday_StartDate__c &lt;=  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>연차여부</label>
    <type>Checkbox</type>
</CustomField>