PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_JoinDate__c.field-meta.xml
<CustomField>
    <fullName>Holiday_JoinDate__c</fullName>
    <label>입사일자</label>
    <type>Date</type>
</CustomField>