PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_LastActivity__c.field-meta.xml
<CustomField>
    <fullName>Holiday_LastActivity__c</fullName>
    <label>최종 사용 내역</label>
    <length>255</length>
    <type>Text</type>
</CustomField>