PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_Monthly_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Monthly_Calculated__c</fullName>
    <description>대유넥스티어 연차 계산법 기준이 회계연도로 변경되어 필드 생성 (생성일: 2022-12-27, 생성자: hyunsoo.song@daeunextier.com)

* 필드 설명
1. 입사 1년차 이상 (월차 만료일 == BLANK || 전년도 월차일수 == 11개)
: 0

2. 신규입사자
: 입사연도 다음 해로 변경될 시 다시 1부터 Count (단, 입사일자의 DAY에 해당하는 일자 하루 전 날 부여됨)

ex) 오늘 2023년 01월 13일
사원A: 입사일 2022-05-16 → 월차 만료일(2023-12-31) →  0개	(매달 15일에 월차 부여)
사원B: 입사일 2022-12-13 → 월차 만료일(2023-12-31) → 1개 	(매달 12일에 월차 부여)

사원C: 입사일 2022-01-01 → 월차 만료일(2023-12-31) → 0개	(전년도 월차 11개, 올해 월차 0개)
사원D: 입사일 2021-09-04 → 월차 만료일(BLANK) → 0개</description>
    <formula>IF(
    ISBLANK(Holiday_Monthly_Period__c) || MonthlyOfLastYear__c = 11, 0,
    IF(
        YEAR(Holiday_Monthly_Period__c) = YEAR(TODAY()),
        11 - MonthlyOfLastYear__c,
        IF(
            FLOOR((DATE(YEAR(TODAY()), 12, 31) - Holiday_JoinDate__c - 1) / 30) &gt; 11,
            11,
            FLOOR((DATE(YEAR(TODAY()), 12, 31) - Holiday_JoinDate__c - 1) / 30)
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>올해 발생한 월차일수 (월차는 입사일에 해당하는 일자 하루 전 날 부여됩니다.)</inlineHelpText>
    <label>올해 월차일수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>