PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_Monthly_Period__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Monthly_Period__c</fullName>
    <formula>IF( 
    YEAR(ADDMONTHS(Holiday_JoinDate__c, 12)) &lt; YEAR(TODAY()), 
    NULL, 
    DATE(YEAR(ADDMONTHS(Holiday_JoinDate__c, 12)), 12, 31)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>월차 만료일</label>
    <type>Date</type>
</CustomField>