PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_NoticeLevel__c.field-meta.xml
<CustomField>
    <fullName>Holiday_NoticeLevel__c</fullName>
    <label>공지 단계</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Need</fullName>
                <default>true</default>
                <label>Not Need</label>
            </value>
            <value>
                <fullName>1st Notice</fullName>
            </value>
            <value>
                <fullName>2nd Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>