PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_PublicWorks_Count__c.field-meta.xml
<CustomField>
    <fullName>Holiday_PublicWorks_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>공가 사용일수</description>
    <label>공가</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>