PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_reward_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Holiday_reward_Total_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>올해 발생한 대체휴가일수 + 전년도 대체휴가 잔여일수</inlineHelpText>
    <label>총 대체휴가일수</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>