PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_rewardDays__c.field-meta.xml
<CustomField>
    <fullName>Holiday_rewardDays__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>올해 대체휴가 사용일수</inlineHelpText>
    <label>대체휴가 사용일수</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>