PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_rewardRemainDays__c.field-meta.xml
<CustomField>
    <fullName>Holiday_rewardRemainDays__c</fullName>
    <defaultValue>0</defaultValue>
    <description>2023-12-14 formula 필드로 사용 예정</description>
    <inlineHelpText>총 대체휴가일수 - 대체휴가 사용일수 - 대체휴가 수당 지급일수</inlineHelpText>
    <label>대체휴가 잔여일수 (삭제예정)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>