PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_RuleWorkingYears__c.field-meta.xml
<CustomField>
    <fullName>Holiday_RuleWorkingYears__c</fullName>
    <description>연차 기준일 당시 연차 추가일수를 계산하기 위한
연차 기준일 당시 근속연수</description>
    <formula>FLOOR((DATE(YEAR(TODAY()), 1, 1) - Holiday_JoinDate__c) / 365 + IF(MONTH(Holiday_JoinDate__c) == 1, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>추가일수 계산용 근속 연수</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>