PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_SickLeave_Count__c.field-meta.xml
<CustomField>
    <fullName>Holiday_SickLeave_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>병가 사용 횟수</description>
    <label>병가</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>