PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Holiday_StartDate__c</fullName>
    <description>대유넥스티어 사내 규칙에 맞는 연차여부 필드 수정(수정일: 2021-12-31, 수정자: cj.sohn@daeunextier.com)
입사기준일인 경우, 입사일 + 365일
연차기준일인 경우, 입사일 다음년도 (연차 기준일)월 (연차 기준일)일 - 1

변경 전 수식
필드 설명 추가(수정일: 2021-01-12, 수정자: cj.sohn@daeunextier.com)
입사기준일인 경우, 입사일 + 365일
연차기준일인 경우, 입사일 다음년도 (연차 기준일)월 (연차 기준일)일
IF(
    $Setup.HolidaySetting__c.JoinDateRule__c, 
    Holiday_JoinDate__c + 365,
    Date(Year(Holiday_JoinDate__c)+1, MONTH($Setup.HolidaySetting__c.HoldayRuleDate__c), DAY($Setup.HolidaySetting__c.HoldayRuleDate__c))
)</description>
    <formula>IF(
    $Setup.HolidaySetting__c.JoinDateRule__c, 
    Holiday_JoinDate__c + 365,
    Date(Year(Holiday_JoinDate__c)+1, MONTH($Setup.HolidaySetting__c.HoldayRuleDate__c), DAY($Setup.HolidaySetting__c.HoldayRuleDate__c))-1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>연차적용시작일</label>
    <type>Date</type>
</CustomField>