PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Total_Count__c</fullName>
    <description>- 신규 입사자 &amp; 기존 입사자
: 올해 월차일수 + 올해 연차일수 + 전년도 연차 잔여일수</description>
    <formula>BLANKVALUE(Holiday_Monthly_Calculated__c, 0) + BLANKVALUE(Holiday_Annual_Calculated__c, 0) + BLANKVALUE(HolidayRemainOfLastYear__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>올해 월차일수 + 올해 연차일수 + 전년도 연차 잔여일수</inlineHelpText>
    <label>총 연월차일수</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>