PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_UseDays__c.field-meta.xml
<CustomField>
    <fullName>Holiday_UseDays__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>올해 연월차 사용일수</inlineHelpText>
    <label>연월차 사용일수</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>