PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_User__c.field-meta.xml
<CustomField>
    <fullName>Holiday_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>임직원</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Holiday</relationshipName>
    <type>Lookup</type>
</CustomField>