PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_WomenHoliday_Count__c.field-meta.xml
<CustomField>
    <fullName>Holiday_WomenHoliday_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>생리휴가 사용일수</description>
    <label>생리휴가</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>