PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/Holiday_WorkingYears__c.field-meta.xml
<CustomField>
    <fullName>Holiday_WorkingYears__c</fullName>
    <description>입사일 기준 근속 년수</description>
    <formula>YEAR(TODAY()) - YEAR(Holiday_JoinDate__c) 
+ IF(
   MONTH(TODAY()) * 100 + DAY(TODAY()) &gt;= 
   MONTH(Holiday_JoinDate__c) * 100 + 
   DAY( Holiday_JoinDate__c) 
   , 0 
   , -1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>근속연수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>