PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>PeriodStartDate__c</fullName>
    <description>연차 발생당시 근속연수를 구하기 위한 연차 시작일</description>
    <label>당해연차시작일</label>
    <type>Date</type>
</CustomField>