PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/RemainOfLastYear__c.field-meta.xml
<CustomField>
    <fullName>RemainOfLastYear__c</fullName>
    <formula>CarriedOverOfLastYear__c - UseDaysOfLastYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>전년도 연차 잔여일수</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>