PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/RewardHolidayTotalOfLastYear__c.field-meta.xml
<CustomField>
    <fullName>RewardHolidayTotalOfLastYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>전년도 대체휴가일수</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>