PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/RewardHolidayUseDaysOfLastYear__c.field-meta.xml
<CustomField>
    <fullName>RewardHolidayUseDaysOfLastYear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>전년도 대체휴가 사용일수</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>