PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/fields/SecondApproverSelection__c.field-meta.xml
<CustomField>
    <fullName>SecondApproverSelection__c</fullName>
    <formula>ChildHolidayAction__r.SecondApproverSelection__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2차 승인 지정여부</label>
    <type>Checkbox</type>
</CustomField>