PA_Education/TestMenifest/force-app/main/default/objects/Holiday__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Holiday_User__c</columns>
    <columns>Holiday_Total_Count__c</columns>
    <columns>Holiday_Total_Remain__c</columns>
    <columns>Holiday_reward_Total_Count__c</columns>
    <columns>fm_Holiday_rewardRemainDays__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>